Post comments (#15)
* implement post comments

* update readme
