# pkg/domain/posts/dto.go
@@ -28,6 +28,18 @@ type getPostOutput struct {
 	AttachmentIds []int64   `json:"attachmentIds"`
 }
 
+type createPostCommentInput struct {
+	Body string `json:"body" validate:"required"`
+}
+
+type getPostCommentOutput struct {
+	Id        int       `json:"id"`
+	Created   time.Time `json:"created"`
+	Author    string    `json:"author"`
+	Body      string    `json:"body"`
+	IsUpdated bool      `json:"IsUpdated"`
+}
+
 // factory functions
 
 func makeGetPostOutput(post Post) getPostOutput {
@@ -39,5 +51,15 @@ func makeGetPostOutput(post Post) getPostOutput {
 		Body:          post.Body,
 		LikeCount:     post.LikeCount,
 		AttachmentIds: utils.ParseStringToInt64Array(post.AttachmentIds),
+	}
+}
+
+func makeGetPostCommentOutput(postComment PostComment) getPostCommentOutput {
+	return getPostCommentOutput{
+		Id:        postComment.Id,
+		Created:   postComment.Created,
+		Author:    postComment.Author,
+		Body:      postComment.Body,
+		IsUpdated: postComment.IsUpdated,
 	}
 }
